--- a/src/App.css
+++ b/src/App.css
@@ -415,6 +415,8 @@ details{
   .roadMap-details-column{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     
   }
 
@@ -424,6 +426,10 @@ details{
   
 .roadmap-description p{
   font-size: 2vw;
+}
+
+.roadMap-details-column h4{
+  width: 10vw;
 }
 
 .aboutSection-right p{
