--- a/src/App.css
+++ b/src/App.css
@@ -291,9 +291,14 @@ width: 25%;
 
 }
 
-details{
-  color: #5a9813;
+/* .faqs-answer{
+  max-height: 0;
+  overflow: hidden;
 }
+
+.faqs-question{
+  cursor: pointer;
+} */
 
 .faqsHeading{
   background-color: #14311b;
